# fiberio

./: .travis.yml  Doxyfile  NOTICE  README.md  config.hpp.in  lcov.sh  meson.build  meson_options.txt
ci/: buildall.sh
ci/archlinux/: Dockerfile
ci/ubuntu18.04/: Dockerfile
docs/html/: all_8hpp.html  all_8hpp__incl.dot  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  classes.html  classfiberio_1_1address__family__not__supported__error-members.html  classfiberio_1_1address__family__not__supported__error.html  classfiberio_1_1address__family__not__supported__error__coll__graph.map  classfiberio_1_1address__family__not__supported__error__coll__graph.md5  classfiberio_1_1address__family__not__supported__error__inherit__graph.md5  classfiberio_1_1detail_1_1socket__device-members.html  classfiberio_1_1detail_1_1socket__device.html  classfiberio_1_1detail_1_1socket__device__coll__graph.md5  classfiberio_1_1detail_1_1socket__device__inherit__graph.map  classfiberio_1_1detail_1_1socket__device__inherit__graph.md5  classfiberio_1_1io__error-members.html  classfiberio_1_1io__error.html  classfiberio_1_1io__error__coll__graph.map  classfiberio_1_1io__error__coll__graph.md5  classfiberio_1_1io__error__inherit__graph.map  classfiberio_1_1io__error__inherit__graph.md5  classfiberio_1_1server__socket-members.html  classfiberio_1_1server__socket.html  classfiberio_1_1socket-members.html  classfiberio_1_1socket.html  classfiberio_1_1socket__closed__error-members.html  classfiberio_1_1socket__closed__error.html  classfiberio_1_1socket__closed__error__coll__graph.md5  classfiberio_1_1socket__closed__error__inherit__graph.map  classfiberio_1_1socket__closed__error__inherit__graph.md5  dir_39bb61c9d3735414dd192718d054d6dd.html  dir_d44c64559bbebec7f509842c48db8b23.html  exceptions_8hpp.html  exceptions_8hpp__dep__incl.map  exceptions_8hpp__dep__incl.md5  exceptions_8hpp__incl.map  exceptions_8hpp__incl.md5  exceptions_8hpp_source.html  (+47 more)
docs/html/search/: all_0.js  all_2.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_a.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js
example/: fibertest.cpp  meson.build
examples/: README.md  benchmark.py  benchmarks.cpp  fiber_benchmarks.cpp  fiber_echo_client.cpp  fiber_echo_server.cpp  meson.build  time_measure.hpp
include/fiberio/: addrinfo.hpp  all.hpp  exceptions.hpp  fiberio.hpp  iostream.hpp  server_socket.hpp  socket.hpp  tcpsocket.hpp
include/fiberio/detail/: scheduler.hpp  utils.hpp
src/: addrinfo.cpp  addrinfo.hpp  fiberio.cpp  iobackend.hpp  loop.cpp  loop.hpp  meson.build  scheduler.cpp  scheduler.hpp  server_socket.cpp  server_socket_impl.cpp  server_socket_impl.hpp  socket.cpp  socket_impl.cpp  socket_impl.hpp  tcpsocket.cpp  utils.cpp  utils.hpp
src/detail/: scheduler.cpp  utils.cpp
src/uv/: addrinfo.cpp  addrinfo.hpp  all.hpp  loop.cpp  loop.hpp  scheduler.hpp  server_socket_impl.cpp  server_socket_impl.hpp  socket_impl.hpp  utils.hpp
tests/: meson.build  scheduling_tests.cpp  server_socket_tests.cpp  socket_tests.cpp
